@@ -161,7 +161,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2bf74b9a0103
+DECL|enum|__anon2ac069070103
 block|{
 DECL|enumerator|RECTANGLE_CHANGE_COMPLETE
 name|RECTANGLE_CHANGE_COMPLETE
@@ -235,7 +235,7 @@ end_define
 begin_typedef
 typedef|typedef
 enum|enum
-DECL|enum|__anon2bf74b9a0203
+DECL|enum|__anon2ac069070203
 block|{
 DECL|enumerator|CLAMPED_NONE
 name|CLAMPED_NONE
@@ -278,7 +278,7 @@ end_typedef
 begin_typedef
 typedef|typedef
 enum|enum
-DECL|enum|__anon2bf74b9a0303
+DECL|enum|__anon2ac069070303
 block|{
 DECL|enumerator|SIDE_TO_RESIZE_NONE
 name|SIDE_TO_RESIZE_NONE
@@ -6095,23 +6095,15 @@ argument_list|(
 name|draw_tool
 argument_list|)
 decl_stmt|;
-name|GimpRectangleToolPrivate
-modifier|*
-name|private
-init|=
-name|GIMP_RECTANGLE_TOOL_GET_PRIVATE
-argument_list|(
-name|tool
-argument_list|)
+name|gdouble
+name|x1
+decl_stmt|,
+name|y1
 decl_stmt|;
 name|gdouble
-name|pub_x1
+name|x2
 decl_stmt|,
-name|pub_y1
-decl_stmt|,
-name|pub_x2
-decl_stmt|,
-name|pub_y2
+name|y2
 decl_stmt|;
 name|gimp_rectangle_tool_get_public_rect
 argument_list|(
@@ -6121,21 +6113,24 @@ name|draw_tool
 argument_list|)
 argument_list|,
 operator|&
-name|pub_x1
+name|x1
 argument_list|,
 operator|&
-name|pub_y1
+name|y1
 argument_list|,
 operator|&
-name|pub_x2
+name|x2
 argument_list|,
 operator|&
-name|pub_y2
+name|y2
 argument_list|)
 expr_stmt|;
 switch|switch
 condition|(
-name|private
+name|GIMP_RECTANGLE_TOOL_GET_PRIVATE
+argument_list|(
+name|tool
+argument_list|)
 operator|->
 name|guide
 condition|)
@@ -6151,22 +6146,22 @@ name|gimp_draw_tool_draw_line
 argument_list|(
 name|draw_tool
 argument_list|,
-name|pub_x1
+name|x1
 argument_list|,
 operator|(
-name|pub_y1
+name|y1
 operator|+
-name|pub_y2
+name|y2
 operator|)
 operator|/
 literal|2
 argument_list|,
-name|pub_x2
+name|x2
 argument_list|,
 operator|(
-name|pub_y1
+name|y1
 operator|+
-name|pub_y2
+name|y2
 operator|)
 operator|/
 literal|2
@@ -6179,24 +6174,24 @@ argument_list|(
 name|draw_tool
 argument_list|,
 operator|(
-name|pub_x1
+name|x1
 operator|+
-name|pub_x2
+name|x2
 operator|)
 operator|/
 literal|2
 argument_list|,
-name|pub_y1
+name|y1
 argument_list|,
 operator|(
-name|pub_x1
+name|x1
 operator|+
-name|pub_x2
+name|x2
 operator|)
 operator|/
 literal|2
 argument_list|,
-name|pub_y2
+name|y2
 argument_list|,
 name|FALSE
 argument_list|)
@@ -6209,57 +6204,26 @@ name|gimp_draw_tool_draw_line
 argument_list|(
 name|draw_tool
 argument_list|,
-name|pub_x1
+name|x1
 argument_list|,
 operator|(
 literal|2
 operator|*
-name|pub_y1
+name|y1
 operator|+
-name|pub_y2
+name|y2
 operator|)
 operator|/
 literal|3
 argument_list|,
-name|pub_x2
+name|x2
 argument_list|,
 operator|(
 literal|2
 operator|*
-name|pub_y1
+name|y1
 operator|+
-name|pub_y2
-operator|)
-operator|/
-literal|3
-argument_list|,
-name|FALSE
-argument_list|)
-expr_stmt|;
-name|gimp_draw_tool_draw_line
-argument_list|(
-name|draw_tool
-argument_list|,
-name|pub_x1
-argument_list|,
-operator|(
-name|pub_y1
-operator|+
-literal|2
-operator|*
-name|pub_y2
-operator|)
-operator|/
-literal|3
-argument_list|,
-name|pub_x2
-argument_list|,
-operator|(
-name|pub_y1
-operator|+
-literal|2
-operator|*
-name|pub_y2
+name|y2
 operator|)
 operator|/
 literal|3
@@ -6271,29 +6235,29 @@ name|gimp_draw_tool_draw_line
 argument_list|(
 name|draw_tool
 argument_list|,
+name|x1
+argument_list|,
 operator|(
+name|y1
+operator|+
 literal|2
 operator|*
-name|pub_x1
-operator|+
-name|pub_x2
+name|y2
 operator|)
 operator|/
 literal|3
 argument_list|,
-name|pub_y1
+name|x2
 argument_list|,
 operator|(
+name|y1
+operator|+
 literal|2
 operator|*
-name|pub_x1
-operator|+
-name|pub_x2
+name|y2
 operator|)
 operator|/
 literal|3
-argument_list|,
-name|pub_y2
 argument_list|,
 name|FALSE
 argument_list|)
@@ -6303,28 +6267,59 @@ argument_list|(
 name|draw_tool
 argument_list|,
 operator|(
-name|pub_x1
-operator|+
 literal|2
 operator|*
-name|pub_x2
+name|x1
+operator|+
+name|x2
 operator|)
 operator|/
 literal|3
 argument_list|,
-name|pub_y1
+name|y1
 argument_list|,
 operator|(
-name|pub_x1
-operator|+
 literal|2
 operator|*
-name|pub_x2
+name|x1
+operator|+
+name|x2
 operator|)
 operator|/
 literal|3
 argument_list|,
-name|pub_y2
+name|y2
+argument_list|,
+name|FALSE
+argument_list|)
+expr_stmt|;
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+operator|(
+name|x1
+operator|+
+literal|2
+operator|*
+name|x2
+operator|)
+operator|/
+literal|3
+argument_list|,
+name|y1
+argument_list|,
+operator|(
+name|x1
+operator|+
+literal|2
+operator|*
+name|x2
+operator|)
+operator|/
+literal|3
+argument_list|,
+name|y2
 argument_list|,
 name|FALSE
 argument_list|)
@@ -6337,12 +6332,12 @@ name|gimp_draw_tool_draw_line
 argument_list|(
 name|draw_tool
 argument_list|,
-name|pub_x1
+name|x1
 argument_list|,
 operator|(
 literal|2
 operator|*
-name|pub_y1
+name|y1
 operator|+
 operator|(
 literal|1
@@ -6350,7 +6345,7 @@ operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_y2
+name|y2
 operator|)
 operator|/
 operator|(
@@ -6359,12 +6354,12 @@ operator|+
 name|SQRT5
 operator|)
 argument_list|,
-name|pub_x2
+name|x2
 argument_list|,
 operator|(
 literal|2
 operator|*
-name|pub_y1
+name|y1
 operator|+
 operator|(
 literal|1
@@ -6372,58 +6367,7 @@ operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_y2
-operator|)
-operator|/
-operator|(
-literal|3
-operator|+
-name|SQRT5
-operator|)
-argument_list|,
-name|FALSE
-argument_list|)
-expr_stmt|;
-name|gimp_draw_tool_draw_line
-argument_list|(
-name|draw_tool
-argument_list|,
-name|pub_x1
-argument_list|,
-operator|(
-operator|(
-literal|1
-operator|+
-name|SQRT5
-operator|)
-operator|*
-name|pub_y1
-operator|+
-literal|2
-operator|*
-name|pub_y2
-operator|)
-operator|/
-operator|(
-literal|3
-operator|+
-name|SQRT5
-operator|)
-argument_list|,
-name|pub_x2
-argument_list|,
-operator|(
-operator|(
-literal|1
-operator|+
-name|SQRT5
-operator|)
-operator|*
-name|pub_y1
-operator|+
-literal|2
-operator|*
-name|pub_y2
+name|y2
 operator|)
 operator|/
 operator|(
@@ -6439,18 +6383,20 @@ name|gimp_draw_tool_draw_line
 argument_list|(
 name|draw_tool
 argument_list|,
+name|x1
+argument_list|,
 operator|(
-literal|2
-operator|*
-name|pub_x1
-operator|+
 operator|(
 literal|1
 operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_x2
+name|y1
+operator|+
+literal|2
+operator|*
+name|y2
 operator|)
 operator|/
 operator|(
@@ -6459,20 +6405,20 @@ operator|+
 name|SQRT5
 operator|)
 argument_list|,
-name|pub_y1
+name|x2
 argument_list|,
 operator|(
-literal|2
-operator|*
-name|pub_x1
-operator|+
 operator|(
 literal|1
 operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_x2
+name|y1
+operator|+
+literal|2
+operator|*
+name|y2
 operator|)
 operator|/
 operator|(
@@ -6481,7 +6427,56 @@ operator|+
 name|SQRT5
 operator|)
 argument_list|,
-name|pub_y2
+name|FALSE
+argument_list|)
+expr_stmt|;
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+operator|(
+literal|2
+operator|*
+name|x1
+operator|+
+operator|(
+literal|1
+operator|+
+name|SQRT5
+operator|)
+operator|*
+name|x2
+operator|)
+operator|/
+operator|(
+literal|3
+operator|+
+name|SQRT5
+operator|)
+argument_list|,
+name|y1
+argument_list|,
+operator|(
+literal|2
+operator|*
+name|x1
+operator|+
+operator|(
+literal|1
+operator|+
+name|SQRT5
+operator|)
+operator|*
+name|x2
+operator|)
+operator|/
+operator|(
+literal|3
+operator|+
+name|SQRT5
+operator|)
+argument_list|,
+name|y2
 argument_list|,
 name|FALSE
 argument_list|)
@@ -6497,11 +6492,11 @@ operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_x1
+name|x1
 operator|+
 literal|2
 operator|*
-name|pub_x2
+name|x2
 operator|)
 operator|/
 operator|(
@@ -6510,7 +6505,7 @@ operator|+
 name|SQRT5
 operator|)
 argument_list|,
-name|pub_y1
+name|y1
 argument_list|,
 operator|(
 operator|(
@@ -6519,11 +6514,11 @@ operator|+
 name|SQRT5
 operator|)
 operator|*
-name|pub_x1
+name|x1
 operator|+
 literal|2
 operator|*
-name|pub_x2
+name|x2
 operator|)
 operator|/
 operator|(
@@ -6532,11 +6527,135 @@ operator|+
 name|SQRT5
 operator|)
 argument_list|,
-name|pub_y2
+name|y2
 argument_list|,
 name|FALSE
 argument_list|)
 expr_stmt|;
+break|break;
+comment|/* This code implements the method of diagonals discovered by      * Edwin Westhoff - see http://www.diagonalmethod.info/      */
+case|case
+name|GIMP_RECTANGLE_GUIDE_DIAGONALS
+case|:
+block|{
+comment|/* the side of the largest square that can be          * fitted in whole into the rectangle (x1, y1), (x2, y2)          */
+specifier|const
+name|gdouble
+name|square_side
+init|=
+name|MIN
+argument_list|(
+name|x2
+operator|-
+name|x1
+argument_list|,
+name|y2
+operator|-
+name|y1
+argument_list|)
+decl_stmt|;
+comment|/* diagonal from the top-left edge */
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+name|x1
+argument_list|,
+name|y1
+argument_list|,
+name|x1
+operator|+
+name|square_side
+argument_list|,
+name|y1
+operator|+
+name|square_side
+argument_list|,
+name|FALSE
+argument_list|)
+expr_stmt|;
+comment|/* diagonal from the top-right edge */
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+name|x2
+argument_list|,
+name|y1
+argument_list|,
+name|x2
+operator|-
+name|square_side
+argument_list|,
+name|y1
+operator|+
+name|square_side
+argument_list|,
+name|FALSE
+argument_list|)
+expr_stmt|;
+comment|/* If user selected a square, we cannot draw from bottom points          * as we would erase the guides drawn from the top points          */
+if|if
+condition|(
+operator|(
+name|x1
+operator|+
+name|square_side
+operator|!=
+name|x2
+operator|)
+operator|||
+operator|(
+name|y1
+operator|+
+name|square_side
+operator|!=
+name|y2
+operator|)
+condition|)
+block|{
+comment|/* diagonal from the bottom-left edge */
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+name|x1
+argument_list|,
+name|y2
+argument_list|,
+name|x1
+operator|+
+name|square_side
+argument_list|,
+name|y2
+operator|-
+name|square_side
+argument_list|,
+name|FALSE
+argument_list|)
+expr_stmt|;
+comment|/* diagonal from the bottom-right edge */
+name|gimp_draw_tool_draw_line
+argument_list|(
+name|draw_tool
+argument_list|,
+name|x2
+argument_list|,
+name|y2
+argument_list|,
+name|x2
+operator|-
+name|square_side
+argument_list|,
+name|y2
+operator|-
+name|square_side
+argument_list|,
+name|FALSE
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 break|break;
 block|}
 block|}
@@ -6581,7 +6700,8 @@ name|gdouble
 name|pub_x1
 decl_stmt|,
 name|pub_y1
-decl_stmt|,
+decl_stmt|;
+name|gdouble
 name|pub_x2
 decl_stmt|,
 name|pub_y2
